# conda-protect

./: .gitignore  LICENSE  README.md  environment.yml  pixi.toml  pyproject.toml
.github/workflows/: tests.yml
conda_protect/: __init__.py  __version__.py  main.py
dev/: setup.sh
envlock/: __version__.py  main.py
guard/: __version__.py  main.py
recipe/: meta.yaml
schutz/: __version__.py  main.py
tests/: test_main.py
